# ChangeLog for dev-python/anyjson
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/anyjson/ChangeLog,v 1.6 2013/01/26 08:51:26 prometheanfire Exp $

*anyjson-0.2.4 (26 Jan 2013)

  26 Jan 2013; Matthew Thode <prometheanfire@gentoo.org> +anyjson-0.2.4.ebuild:
  adding anyjson-0.2.4 because sys-cluster/quantum requires it :(

*anyjson-0.3.3-r1 (13 Jan 2013)

  13 Jan 2013; Michał Górny <mgorny@gentoo.org> +anyjson-0.3.3-r1.ebuild:
  Migrate to distutils-r1. Enable tests.

  18 Jul 2012; Corentin Chary <iksaif@gentoo.org> anyjson-0.3.3.ebuild:
  Simplify PYTHON_DEPEND.

  17 Jul 2012; Corentin Chary <iksaif@gentoo.org> -anyjson-0.3.1.ebuild,
  anyjson-0.3.3.ebuild:
  anyjson-0.3.3 bump.

*anyjson-0.3.3 (28 Jun 2012)

  28 Jun 2012; Patrick Lauer <patrick@gentoo.org> +anyjson-0.3.3.ebuild:
  Bump

*anyjson-0.3.1 (30 May 2012)

  30 May 2012; Corentin Chary <iksaif@gentoo.org> +anyjson-0.3.1.ebuild,
  +metadata.xml:
  New ebuild for anyjson.